--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nuxt": "^2.15.8",
     "nuxt-property-decorator": "^2.9.1",
     "vue": "^2.6.14",
+    "vue-plyr": "^7.0.0",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
