--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nuxt-property-decorator": "^2.9.1",
     "v-tooltip": "^2.1.3",
     "vue": "^2.6.14",
+    "vue-directive-tooltip": "^1.6.3",
     "vue-plyr": "^7.0.0",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
